<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="human.hujackman.OutboundActivity">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_margin="3dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/inbound_barcode_button"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:text="@string/inbound_action_barcode"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/outbound_barcode"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="2 "
            />

        <Button
            android:id="@+id/outbound_barcode_search"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:text="@string/outbound_barcode_search"
            android:textSize="11sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="158dp"
        android:layout_margin="3dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray"
            android:ems="10"
            android:inputType="textMultiLine"
            android:editable="false"
            android:textAlignment="viewStart"
            android:visibility="visible" />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="70dp"
            android:layout_height="37dp"
            android:layout_weight="1"
            android:text="@string/inbound_company_name"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinner_bizcomp"
            style="@android:style/Widget.Spinner.DropDown"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:dropDownWidth="match_parent"
            android:spinnerMode="dialog"
            android:visibility="visible" />
    </LinearLayout>




    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_margin="3dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/inbound_action_submit"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="1dp"
            android:text="@string/inbound_action_submit"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>
